feat(smart-auth): 重构jwt认证模式